# sam-sqlserver-database

./: README.md  config.yaml  pyproject.toml  requirements.txt
configs/agents/: sql-server-agent-iifl.yaml
examples/: examples_llm.txt  jira_sql_request.yaml  rt_sql_request.yaml
src/: .env  requirements.txt
src/configs/: logging_config.ini  shared_config.yaml
src/configs/agents/: main_orchestrator.yaml
src/configs/gateways/: webui.yaml
src/sam_sql_database/: __init__.py  lifecycle.py  tools.py
src/sam_sql_database/services/: __init__.py  csv_import_service.py  database_service.py  services_llm.txt
tests/: sqlalchemytest.py  test_placeholder.py
